CSS/styles.css
header {
  background-color: white;
  border-bottom: solid black 3px;
  position: fixed;
  top: 0;
  z-index: 1;
  width: 100%;
  left: 0;
}

h1 {
  text-align: center;
}

main {
  margin-top: 100px;
  margin-bottom: 70px;
}

.card {
  border: solid;
  padding: 5px;
  margin: 30px;
  position: relative;
}

.cardtext {
  text-align: center;
}

.button-container {
  text-align: center;
}

.tags {
  display: flex;
  justify-content: start;
  gap: 5px;
}

.singletag {
  border: solid;
  padding: 3px;
  border-radius: 5px;
  background-color: beige;
  font-size: 13px;
}

.bookmark {
  height: 20px;
  position: absolute;
  top: -10px;
  right: 10px;
}

.footer {
  width: 100%;
  left: 0;
  background-color: rgb(179, 179, 179);
  position: fixed;
  bottom: 0;
  padding: 8px;
  display: flex;
  justify-content: space-around;
}

.navitem {
  height: 2rem;
  padding: 2px 20px;
  border-radius: 10px;
}

a:hover {
  background: white;
  border-radius: 10px;
}

.active {
  background-color: white;
}

.avatarpic {
  padding: 5px;
  margin-right: 10px;
  border: solid grey;
}

.avatarname {
  font-size: 24px;
  display: flex;
  align-items: center;
}

